--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     <br>
                     <p class="text-title">Repository</p>
-                    <p class="text-body">&#8226; <a target="_blank" href="https://github.com/rushmi0/Fenrir-s">https://github.com/rushmi0/Fenrir-s</a>
+                    <p class="text-body">&#8226; <a target="_blank" href="https://github.com/rushmi0/Fenrir-s" style="text-decoration: underline;">https://github.com/rushmi0/Fenrir-s</a></p>
                     </p>
 
                     <br/>
