--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <br/>
                     <div>
                         <p class="text-title">NIPs Supported</p>
-                        <p class="text-body">&nbsp; &#8226; ✅ NIP-01 Basic protocol flow</p>
+                        <p style="margin-top: 5px" class="text-body">&nbsp; &#8226; ✅ NIP-01 Basic protocol flow</p>
                         <p class="text-body">&nbsp; &#8226; ✅ NIP-02 Follow List</p>
                         <p class="text-body">&nbsp; &#8226; ✅ NIP-04 Encrypted Direct Message</p>
                         <p class="text-body">&nbsp; &#8226; ✅ NIP-09 Event Deletion</p>
