--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
                     <br>
                     <p class="text-title">Repository</p>
                     <p class="text-body">&#8226; <a target="_blank" href="https://github.com/rushmi0/Fenrir-s" style="text-decoration: underline;">https://github.com/rushmi0/Fenrir-s</a></p>
-                    </p>
 
                     <br/>
+
+                    <!-- NIP Supported List -->
                     <div>
                         <p class="text-title">NIPs Supported</p>
                         <p style="margin-top: 5px" class="text-body">&nbsp; &#8226; ✅ NIP-01 Basic protocol flow</p>
@@ -169,8 +170,8 @@
 
                 </div>
             </div>
-
         </div>
+
 
     </div>
 
