--- a/index.html
+++ b/index.html
@@ -82,33 +82,33 @@
             <div class="detail card">
                 <div class="card-details">
                     <p class="text-title">Coding Skills</p>
-                    <p class="text-body">Kotlin</p>
-                    <p class="text-body">Python</p>
-                    <p class="text-body">JavaScript</p>
-                    <p class="text-body">Java</p>
-                    <p class="text-body">C#</p>
-                    <p class="text-body">HTML, CSS</p>
-                    <p class="text-body">SQL (Postgresql, Sqlite)</p>
+                    <p class="text-body">&nbsp; Kotlin</p>
+                    <p class="text-body">&nbsp; Python</p>
+                    <p class="text-body">&nbsp; JavaScript</p>
+                    <p class="text-body">&nbsp; Java</p>
+                    <p class="text-body">&nbsp; C#</p>
+                    <p class="text-body">&nbsp; HTML, CSS</p>
+                    <p class="text-body">&nbsp; SQL (Postgresql, Sqlite)</p>
 
                     <br/>
                     <p class="text-title">Backend Framework</p>
-                    <p class="text-body">Micronaut</p>
-                    <p class="text-body">Ktor</p>
+                    <p class="text-body">&nbsp; Micronaut</p>
+                    <p class="text-body">&nbsp; Ktor</p>
 
                     <br/>
                     <p class="text-title">Development Tools</p>
-                    <p class="text-body">Git, GitHub</p>
-                    <p class="text-body">Linux/Unix</p>
-                    <p class="text-body">Docker</p>
-                    <p class="text-body">Qodana, Sonarqube</p>
-                    <p class="text-body">JetBrains IDE</p>
-                    <p class="text-body">Figma</p>
+                    <p class="text-body">&nbsp; Git, GitHub</p>
+                    <p class="text-body">&nbsp; Linux/Unix</p>
+                    <p class="text-body">&nbsp; Docker</p>
+                    <p class="text-body">&nbsp; Qodana, Sonarqube</p>
+                    <p class="text-body">&nbsp; JetBrains IDE</p>
+                    <p class="text-body">&nbsp; Figma</p>
 
                     <br/>
                     <p class="text-title">Networking & Security</p>
-                    <p class="text-body">Cloudflare Tunnel</p>
-                    <p class="text-body">Cryptography Fundamentals</p>
-                    <p class="text-body">Cybersecurity Fundamentals</p>
+                    <p class="text-body">&nbsp; Cloudflare Tunnel</p>
+                    <p class="text-body">&nbsp; Cryptography Fundamentals</p>
+                    <p class="text-body">&nbsp; Cybersecurity Fundamentals</p>
 
                 </div>
             </div>
@@ -144,13 +144,16 @@
                         Fenrir-s is Nostr Relay implementation in Kotlin
                         <br/>
                         <br/>
-                        This project is focused on personal use or for use within a group of friends. You can configure the
+                        This project is focused on personal use or for use within a group of friends. You can configure
+                        the
                         Relay policy according to your needs, and it is easy to install.
                     </p>
 
                     <br>
                     <p class="text-title">Repository</p>
-                    <p class="text-body">&#8226; <a target="_blank" href="https://github.com/rushmi0/Fenrir-s" style="text-decoration: underline;">https://github.com/rushmi0/Fenrir-s</a></p>
+                    <p class="text-body">&nbsp; &#8226; <a target="_blank" href="https://github.com/rushmi0/Fenrir-s"
+                                                    style="text-decoration: underline;">https://github.com/rushmi0/Fenrir-s</a>
+                    </p>
 
                     <br/>
 
