Edit text content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <br/>
                     <br/>
                     I have a strong passion for developing software for Bitcoin
-                    and Nostr (social network protocol)
+                    and Nostr (Social Network Protocol)
                 </div>
             </div>
         </div>
