--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="item">
 
             <div class="introduce">
-                <div class="topic animated">WATCHARAPOL PHONGWILAI</div>
+                <div class="topic">WATCHARAPOL PHONGWILAI</div>
                 <div class="des">
                     Hi!, currently studying for a Bachelor of Science in Information Technology
                     <br/>
