--- a/index.html
+++ b/index.html
@@ -144,9 +144,7 @@
                         Fenrir-s is Nostr Relay implementation in Kotlin
                         <br/>
                         <br/>
-                        This project is focused on personal use or for use within a group of friends. You can configure
-                        the
-                        Relay policy according to your needs, and it is easy to install.
+                        This project is focused on personal use or for use within a group of friends.
                     </p>
 
                     <br>
