--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>rushmi0</title>
     <!-- Favicons -->
     <link href="images/icons/icon-1.png" rel="icon">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -177,8 +176,8 @@
     </div>
 
     <div class="arrows">
-        <button id="prev"><</button>
-        <button id="next">></button>
+        <button id="prev">&#60;</button>
+        <button id="next">&#62;</button>
         <button id="back">See All &#8599</button>
     </div>
 
