--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>rushmi0</title>
     <!-- Favicons -->
     <link href="images/icons/icon-1.png" rel="icon">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
